--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           Drop an email
           <li><SCRIPT LANGUAGE="JavaScript">
             user = 'hello';
-            site = 'robinsweb.dev';
+            site = 'robinmehdee.com';
             document.write('<a href=\"mailto:' + user + '@' + site + '\">');
             document.write(user + '@' + site + '</a>');
             </SCRIPT></li>
